	(you could always specify 'available' or 'contriburl').

    o	available.packages() by default only returns information on
	the latest versions of packages whose version requirements are
	satisified by the currently running R: use 'duplicates = TRUE'
	to return information on all available versions.

    o	tools::write_PACKAGES() has a new argument 'latestOnly'.


DEPRECATED & DEFUNCT

    o	Bundles of packages are deprecated.  See 'Writing R
	Extensions' for the steps needed to unbundle a bundle.


UTILITIES

    o	There is some makefile support for adding/updating translations
	in packages: see po/README and 'Writing R Extensions'.


BUG FIXES

    o	sprintf() now signals an error when the result of single format
	specification would be longer than the limit (8192 bytes); it would
	return "somewhat random" results or segfault previously. (PR#13667)
	Further, arguments of type "language" or "symbol" are no longer
	allowed, as these, e.g., sprintf("%s", quote(list())), typically
	lead to unexpected results or hard to understand error messages.



	**************************************************
	*						 *
	*	       2.9 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.9.0 patched


NEW FEATURES

    o	New function anyDuplicated(x) returns 0 (= FALSE) or the index
	of the first duplicated entry of x.

    o	matplot(), matlines() and matpoints() now also obey a 'lend'
	argument, determining line end styles. (Wish of PR#13619).

    o	bw.SJ(), bw.bcv() and bw.ucv() now gain an optional 'tol'
	argument allowing more accurate estimates.

    o	new.packages() no longer regards packages with the same name
	as a member of an installed bundle as 'new' (this is now
	consistent with the dependency checks in install.packages()).

	It no longer reports on partially installed bundles (since
	members can be updated individually if a bundle is unbundled).

    o	old.packages() and hence updates.packages() will look for